--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "4.5.3",
     "contentful": "7.15.0",
     "graphql-playground-html": "1.6.29",
     "react": "17.0.0",
     "react-beautiful-dnd": "13.0.0",
+    "react-bootstrap": "1.4.0",
     "react-dnd-html5-backend": "11.1.3",
     "react-dom": "17.0.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "reactstrap": "8.7.1"
   },
   "devDependencies": {
     "typescript": "3.8.3"
