--- a/package.json
+++ b/package.json
@@ -5,17 +5,14 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "bootstrap": "4.5.3",
     "contentful": "7.15.0",
     "react": "17.0.0",
-    "react-bootstrap": "1.4.0",
     "react-contentful": "2.0.30",
     "react-dom": "17.0.0",
     "react-expand-animated": "1.0.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
-    "reactstrap": "8.7.1"
+    "react-scripts": "3.4.3"
   },
   "devDependencies": {
     "typescript": "3.8.3"
